...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AvaluacioActivity"
    android:padding="16dp"
    android:weightSum="2"
    android:id="@+id/aval2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

...
