<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/avalEnd"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AvaluacioActivityFinal">

    <TextView
        android:id="@+id/tv_resultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>

</LinearLayout>