...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/aval"
    tools:context=".AvaluacioActivity"
    android:padding="16dp"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
...
